# HCMUT-CO5135-BigData-MiniProject

./: .env.example  README.md  news_scoring_supabase.ipynb
data-pipeline/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data-pipeline/dags/: assets_dimension_etl.py  market_data_prices_daily.py  market_news_morning.py  refresh_historical_prices.py
data-pipeline/dags/etl_modules/: cache.py  errors.py  fetcher.py  kbs_provider.py  notifications.py  refresh_historical_trigger.py  request_governor.py  settings.py  vci_provider.py  vietstock_corp_actions.py
data-pipeline/dags/etl_modules/adapters/: market_data_repository.py  notification_adapter.py  price_provider_adapter.py
data-pipeline/dags/etl_modules/contracts/: __init__.py  providers.py
data-pipeline/dags/etl_modules/extractors/: base.py  (+4 more)
data-pipeline/scripts/: bootstrap-airflow-pools.sh  validate.sh
data-pipeline/tests/: conftest.py
data-pipeline/tests/integration/: test_dag_import_smoke.py
data-pipeline/tests/mocks/: api_responses.py
data-pipeline/tests/unit/: test_assets_dimension_etl.py  test_cache.py  test_fetcher.py  test_fetcher_imports.py  test_kbs_provider.py  test_market_data_prices_daily.py  test_market_data_repository.py  test_notification_adapter.py  test_notifications.py  test_notifications_orchestrator.py  test_pipeline_shared_helpers.py  test_price_ratio_transformers.py  test_prices_orchestrator.py  test_provider_contracts.py  test_refresh_historical_prices.py  test_request_governor.py  test_vci_provider.py  test_vietstock_corp_actions.py
(+9 files in other folders)
