[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "apache-airflow>=3.2.1",
    "apache-airflow-providers-common-sql>=1.35.0",
    "apache-airflow-providers-postgres>=6.6.3",
    "apache-airflow-providers-telegram>=4.9.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "google-genai>=1.73.1",
    "lxml>=6.1.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pycoingecko>=3.2.0",
    "python-dotenv>=1.2.2",
    "redis>=5.0.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "supabase>=2.0.0",
    "torch>=2.11.0",
    "transformers[torch]>=5.6.2",
    "vnstock==3.5.1",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "freezegun==1.2.2",
    "mypy==1.18.2",
    "pytest==7.4.0",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.11.1",
    "ruff==0.14.2",
    "responses==0.23.3",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
files = ["dags", "tests"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.uv]
environments = ["sys_platform == 'linux'"]
